--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/replica_sync",
-            "args": [],
+            "args": ["2049"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
